# vamas_twa42_p6_raman_calibration

./: CONTRIBUTING.md  LICENSE  README.md  README_config.md  README_input.md  README_overview.md  README_pipeline.md  README_ploomber.md  README_template.md  pyproject.toml
examples/ploomber_demo/: Peak Fitting Data Reporting-CSIC-ICV.xlsx  config_pipeline.json
examples/ploomber_demo/Figure4 (Silicon)/S3/: S0B_532nm_x20_10000ms_5acc_day1_ICVBwtek_1.txt  S0N_532nm_x20_5000ms_5acc_day1_ICVBwtek_1.txt  S0P_532nm_x20_10000ms_5acc_day1_ICVBwtek_1.txt  S1N_532nm_x20_5000ms_5acc_day1_ICVBwtek_1.txt  Sil_532nm_x20_10000ms_5acc_day1_ICVBwtek_1.txt
examples/ploomber_demo/Figure5and6 (Calcite)/S3/: sCAL02_iRPlus532_Z020_100_3800ms.txt
examples/ploomber_demo/Figure7 (Polystyrene)/S3/: Ne_532nm_x20_400ms.txt  Ne_532nm_x20_5ms.txt  PST02_iRPlus532_Z020_100_550msx5.txt  S0B02_iRPlus532_Z020_100_30000msx2.txt
examples/ploomber_demo/NIST/: NISTSRM2242aC_BW532_20x_700msx1.txt
src/: TODO.md  calibration_verify.py  env.demo.yaml  env_example.yaml  overview.py  pipeline.demo.yaml  pipeline.yaml  release.py  spectraframe_calibrate.py  spectraframe_load.py  spectraframe_ycalibrate.py  utils.py
