[tool.poetry]
package-mode = false
name = "vamas_twa42_p6_raman_calibration"
version = "0.1.0"
description = "Data analysis for VAMAS Project 06 Protocols for Raman instrument calibration and harmonisation of Raman data"
authors = ["Nina Jeliazkova <jeliazkova.nina@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ploomber = "^0.23.2"
jupyter = "^1.0.0"
h5py = "^3.10.0"
h5pyd = "^0.18.0"
nexusformat = "^1.0.4"
numpy = "^1.26.4"
requests = "^2.31.0"
scipy = "^1.11.4"
scikit-learn = "^1.4.1.post1"
ramanchada2 = "^1.3.0"
pyambit = "^0.0.1"
pynanomapper = "^2.0.1"
tables = "^3.9.2"
emd = "^0.7.0"
numcompress = "^0.1.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
